--- a/sources/enumext.dtx
+++ b/sources/enumext.dtx
@@ -605,7 +605,7 @@
                     itemindent, labelwidth, leftmarginiii,leftmarginiv,itemindent, itemsep, strutbox, raggedright, cs_new_eq, N, NN,%
                     labelwidth, fbox, addvspace, Alph, alph, arabic, Roman, roman, partopsep, baselineskip, mode_leave_vertical,%
                     textborn, textbullet, textendash, textasteriskcentered, textperiodcentered, raggedleft, peek_remove_spaces, skip_horizontal, %
-                    triangleright, diamond, circ, parleft, star, centering, ast, hyperlink, hypertarget, newtheorem, %
+                    triangleright, diamond, circ, parleft, star, centering, ast, hyperlink, hypertarget, newtheorem, counterwithin, %
                     aux_i, aux_ii, aux_iii, exp_args, if@noitemarg, if, if@hyper@item, hyper, noitemarg, regex_match, regex_if_match,%
                     skip_vertical, obeyedline, tl_replace_all, mbox, tl_rescan, tl_set_rescan, tex_scantokens, setcounter, },%
 % Other words 3
@@ -2419,21 +2419,21 @@
 % \keyexamp*{reset}{value forbidden}{not used}
 % Resets the \emph{start value} of the \emph{\enquote{counters}} in the
 % \myenv*{enumext} and \myenv*{enumext*} environments along with the
-% \mymeta{internal values} of these \emph{\enquote{counters}} used by
-% the \mykey{resume} \emph{without value} and \mykey{resume*} keys at the
-% \emph{\enquote{level}} at which it is executed. The \emph{start value}
-% can be overwritten using the \mykey{start} or \mykey{start*} keys.
+% \emph{\enquote{internal counters}} used by the \mykey{resume} \emph{without value} 
+% and \mykey{resume*} keys at the \emph{\enquote{level}} at which it is 
+% executed. The \emph{start value} can be overwritten using the \mykey{start} 
+% or \mykey{start*} keys.
 %
 % \smallskip
 %
 % \keyexamp*{reset\textcolor{MediumOrchid}{*}}{value forbidden}{not used}
 % Resets the \emph{start value} of the \emph{\enquote{counters}} in the
 % \myenv*{enumext} and \myenv*{enumext*} environments along with the
-% \mymeta{internal values} of these \emph{\enquote{counters}} used by
-% the \mykey{resume} \emph{without value} and \mykey{resume*} keys at the
-% \emph{\enquote{level}} at which it is executed and in the \emph{\enquote{levels below}}
-% it in the case of the \myenv*{enumext} environment. The \emph{start value}
-% can be overwritten using the \mykey{start} or \mykey{start*} keys.
+% \emph{\enquote{internal counters}} used by the \mykey{resume} \emph{without value} 
+% and \mykey{resume*} keys at the \emph{\enquote{level}} at which it is 
+% executed and in the \emph{\enquote{levels below}} it in the case of 
+% the \myenv*{enumext} environment. The \emph{start value} can be overwritten 
+% using the \mykey{start} or \mykey{start*} keys.
 %
 % \smallskip
 %
@@ -2464,12 +2464,11 @@
 %
 %  The \ics*{resetenumext} command \emph{\enquote{resets}} the \emph{start value}
 %  of the \emph{\enquote{counters}} ​​for the \myenv*{enumext} and \myenv*{enumext*}
-%  environments along with the \mymeta{internal values} of these \emph{\enquote{counters}} ​​used by
+%  environments along with the \emph{\enquote{internal counters}} ​​used by
 %  the keys \mykey{resume} \emph{without value} and \mykey{resume*}
-%  according to the value of \mymarg{some counter}.
-%  For example |\resetenumext{chapter}| will \emph{\enquote{reset}} the numbering
-%  of \emph{\enquote{all levels}} of the \myenv*{enumext} environment for
-%  each execution of a \emph{\enquote{numbered}} chapter.
+%  according to the value of \mymarg{some counter}. For example |\resetenumext{chapter}| 
+%  will \emph{\enquote{reset}} the numbering of \emph{\enquote{all levels}} 
+%  of the \myenv*{enumext} environment for each execution of a \emph{\enquote{numbered}} chapter.
 % \end{function}
 %
 % \smallskip
@@ -2492,16 +2491,12 @@
 %
 % \keyexamp{columns}{integer}{\mydim{1}}
 %
-% \smallskip
-%
 % Set the \emph{number of columns} to be used by the \myenv{multicols}
 % environment within the environments \myenv*{enumext} and \myenv*{keyans}. The value must be a positive
 % integer less than or equal to \mydim{10}.
 % In the \myenv*{enumext*} and \myenv*{keyans*} environments they
 % correspond to the default number of columns (without joining) and
 % internally adjust the value of |\itemwidth|.
-%
-% \smallskip
 %
 % \keyexamp{columns-sep}{rigid length}{by level}
 %
@@ -5766,7 +5761,7 @@ Some text here
 %    \end{macrocode}
 % Now declare the \mypkg*{enumext} package.
 %    \begin{macrocode}
-\ProvidesExplPackage {enumext} {2025-06-21} {1.6} {Enumerate exercise sheets}
+\ProvidesExplPackage {enumext} {2025-06-30} {1.6} {Enumerate exercise sheets}
 %    \end{macrocode}
 % Finally check if the \mypkg{multicol} package are loaded, if not we load it.
 %    \begin{macrocode}
@@ -5858,9 +5853,8 @@ Some text here
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_ref_key_arg_tl,
-%                       \l_@@_ref_the_count_tl, \l_@@_the_counter_X_tl,
-%                       \l_@@_renew_counter_X_tl, }
+% \begin{variable}[int]{\l_@@_ref_key_arg_tl, \l_@@_ref_the_count_tl,
+%                       \l_@@_renew_counter_X_tl, \l_@@_the_counter_X_tl,}
 %   Internal variables used by \mykey{ref} key (\S\ref{key:label-ref}).
 % \iffalse
 %% Variables used by |ref| key.
@@ -5878,8 +5872,7 @@ Some text here
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_series_name_tl,
-%                       \l_@@_resume_X_bool, \g_@@_resume_X_int,
+% \begin{variable}[int]{\l_@@_series_name_tl, \l_@@_resume_X_bool,
 %                       \g_@@_not_key_series_X_tl, \g_@@_series_name_X_tl,}
 %   Internal variables used by \mykey{resume}, \mykey{resume*} and
 %   \mykey{series} keys (\S\ref{key:series}).
@@ -5887,11 +5880,10 @@ Some text here
 %% Variables used by |series|, |resume| and |resume*| keys.
 % \fi
 %    \begin{macrocode}
-\tl_new:N    \l_@@_series_name_tl
+\tl_new:N \l_@@_series_name_tl
 \cs_set_protected:Npn \@@_tmp:n #1
   {
     \bool_new:c { l_@@_resume_#1_bool       }
-    \int_new:c  { g_@@_resume_#1_int        }
     \tl_new:c   { g_@@_not_key_series_#1_tl }
     \tl_new:c   { l_@@_series_name_#1_tl    }
   }
@@ -7082,7 +7074,7 @@ Some text here
 % \end{arguments}
 %
 % \iffalse
-%% Definition of counters.
+%% Definition of counters for all environments.
 % \fi
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_define_counter:Nn #1 #2
@@ -7110,6 +7102,31 @@ Some text here
 \@@_define_counter:Nn \l_@@_counter_vi_tl   { enumXvi   }
 \@@_define_counter:Nn \l_@@_counter_vii_tl  { enumXvii  }
 \@@_define_counter:Nn \l_@@_counter_viii_tl { enumXviii }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[int]{\c@__enumext_resume_i_int, \c@__enumext_resume_ii_int,
+%                    \c@__enumext_resume_iii_int, \c@__enumext_resume_iv_int,
+%                    \c@__enumext_resume_vii_int,}
+%  In version 1.6 the command |\resetenumext| (\S\ref{cmd:resetenumext})
+%  was added which internally uses |\counterwithin*| so for its correct
+%  operation, we will create \emph{\enquote{real counters}} instead of
+%  the \emph{\enquote{integer variables}} for the keys \mykey{resume}
+%  and \mykey{resume*}.
+% \iffalse
+%% Definition of internal counters for |resume| and |resume*| keys.
+% \fi
+%    \begin{macrocode}
+\cs_set_protected:Npn \@@_tmp:n #1
+  {
+    \cs_if_exist:cTF { c@ @@_resume_#1_int }
+      { \msg_fatal:nne { enumext } { counters }{ @@_resume_#1_int } }
+      {
+        \newcounter { @@_resume_#1_int }
+      }
+  }
+\clist_map_inline:nn {i,ii,iii,iv,vii} { \@@_tmp:n {#1} }
+%% \int_show:c { c@ @@_resume_i_int }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -9289,10 +9306,10 @@ Some text here
 %
 % The \mykey{series} key is responsible for the whole process of the
 % \mykey{resume} and \mykey{resume*} keys. The idea behind this is to be
-% able to absorb the \mymeta{keys} passed to the \emph{optional argument} of the
-% of the environments \myenv*{enumext} and \myenv*{enumext*}, but, discarding some specific
-% \mymeta{keys}. This implementation is adapted directly from the code
-% provided by Jonathan P. Spratte \texttt(@Skillmon) in \href{https://chat.stackexchange.com/transcript/41?m=65647962#65647962}{chat-TeX-SX}
+% able to absorb the \mymeta{keys} passed to the \emph{optional argument}
+% of the environments \myenv*{enumext} and \myenv*{enumext*}, but, discarding
+% some specific \mymeta{keys}. This implementation is adapted directly from
+% the code provided by Jonathan P. Spratte \texttt(@Skillmon) in \href{https://chat.stackexchange.com/transcript/41?m=65647962#65647962}{chat-TeX-SX}
 %
 % \begin{macro}[int]{series, resume, resume*, }
 %     We define the keys \mykey{series}, \mykey{resume}
@@ -9496,11 +9513,10 @@ Some text here
 %
 % \begin{macro}{\@@_standar_save_counter:, \@@_standar_save_counter_aux:,
 %               \@@_starred_save_counter:, \@@_starred_save_counter_aux:}
-%
 %   The \cs{@@_standar_save_counter:} and \cs{@@_starred_save_counter:}
-%   functions will save the last counter value to \myvarenv{g__@@_series_\mymeta[cf=gray]{series name}_int} if
-%   the \mykey{series}|=|\mymarg{series name} key has been passed, to
-%   \myvarenv{g__@@_resume_X_int} if it has passed the key \mykey{resume}
+%   functions will save the last counter value to \myvarenv{g__@@_series_\mymeta[cf=gray]{series name}_int}
+%   if the \mykey{series}|=|\mymarg{series name} key has been passed, to
+%   \myvarenv{c@__@@_resume_X_int} if it has passed the key \mykey{resume}
 %   \emph{without value} and the key \mykey{series} is not active, in
 %   \myvarenv{g__@@_series_\mymeta[cf=gray]{series name}_X_int} if the key
 %   \mykey{resume}|=|\mymarg{series name} has been passed and in
@@ -9555,7 +9571,7 @@ Some text here
             \tl_if_empty:NT \l_@@_store_name_tl
               {
                 \int_gset_eq:cc
-                  { g_@@_resume_ \@@_level: _int } { c@enumX \@@_level: }
+                  { c@ @@_resume_ \@@_level: _int } { c@enumX \@@_level: }
               }
           }
       }
@@ -9595,7 +9611,7 @@ Some text here
           {
             \tl_if_empty:NT \l_@@_store_name_tl
               {
-                \int_gset_eq:NN \g_@@_resume_vii_int \value{enumXvii}
+                \int_gset_eq:cc { c@ @@_resume_vii_int } { c@enumXvii }
               }
           }
       }
@@ -9613,12 +9629,13 @@ Some text here
 % \subsubsection{Internal functions for \texttt{resume} key}
 %
 % \begin{macro}{\@@_resume_series:n, \@@_resume_series_vii:n}
-%   The functions \cs{@@_resume_series:n} and \cs{@@_resume_series_vii:n} will handle the \mymarg{argument}
-%   passed to the \mykey{resume} key in \myenv*{enumext} and \myenv*{enumext*} environments.
-%   If the key is passed \emph{without value} the function
-%   \cs{@@_resume_counter:n} is executed which will set the counter
-%   according to the numbering of the last \myenv*{enumext} or \myenv*{enumext*}
-%   environments in which \mykey{series}|=|\mymarg{series name} key is NOT present.
+%   The functions \cs{@@_resume_series:n} and \cs{@@_resume_series_vii:n}
+%   will handle the \mymarg{argument} passed to the \mykey{resume} key in
+%   \myenv*{enumext} and \myenv*{enumext*} environments. If the key is
+%   passed \emph{without value} the function \cs{@@_resume_counter:n}
+%   is executed which will set the counter according to the numbering of
+%   the last \myenv*{enumext} or \myenv*{enumext*} environments in which
+%   \mykey{series}|=|\mymarg{series name} key is NOT present.
 % \iffalse
 %% Internal function for |resume=series| key.
 % \fi
@@ -9630,7 +9647,6 @@ Some text here
         \tl_if_empty:nTF {#1}
           {
             \@@_resume_counter:n { }
-            %%\@@_resume_counter:
           }
           {
             \tl_if_exist:cTF { g_@@_series_ \tl_to_str:n {#1} _ \@@_level: _tl }
@@ -9652,7 +9668,6 @@ Some text here
         \tl_if_empty:nTF {#1}
           {
             \@@_resume_counter:n { }
-            %%\@@_resume_counter:
           }
           {
             \tl_if_exist:cTF { g_@@_series_ \tl_to_str:n {#1} _vii_tl }
@@ -9698,11 +9713,7 @@ Some text here
         \tl_set:Nn \l_@@_series_name_tl {#1}
         \tl_if_empty:NTF \l_@@_series_name_tl
           {
-            \typeout{resume~sin~valor}
-            %%\int_show:c { g_@@_resume_ \int_to_roman:n {\l__enumext_level_int} _int }
-            \@@_resume_counter:%%%n { }
-            % \int_show:c {c@enumXi}
-            %%\int_show:c { g_@@_resume_ \int_to_roman:n {\l__enumext_level_int} _int }
+            \@@_resume_counter:
           }
           {
             \@@_resume_counter_series:
@@ -9735,10 +9746,8 @@ Some text here
       {
         \exp_args:Ne \int_set:cn { l_@@_start_ \int_to_roman:n {##1} _int }
           {
-            \int_use:c {  g_@@_resume_ \int_to_roman:n {##1} _int } + 1
+            \int_use:c { c@ @@_resume_ \int_to_roman:n {##1} _int } + 1
           }
-        % show this
-        %\int_show:c {  g_@@_resume_ \int_to_roman:n {##1} _int }
       }
     \int_compare:nNnT { \l_@@_level_int } > { 0 }
       {
@@ -9768,7 +9777,10 @@ Some text here
               }
           }
           {
-            \int_set:Nn \l_@@_start_vii_int { \g_@@_resume_vii_int + 1 }
+            \int_set:Nn \l_@@_start_vii_int
+              {
+                \int_use:c { c@ @@_resume_vii_int } + 1
+              }
           }
       }
   }
@@ -9891,7 +9903,7 @@ Some text here
 %                   }
 %   The \ics*{resetenumext} command \emph{\enquote{resets}} the \emph{start value}
 %   of the \emph{\enquote{counters}} ​​for the \myenv*{enumext} and \myenv*{enumext*}
-%   environments along with the \mymeta{internal values} of these \emph{\enquote{counters}} ​​used by
+%   environments along with the \emph{\enquote{internal counters}} ​​used by
 %   the keys \mykey{resume} \emph{without value} and \mykey{resume*}
 %   according to the value of \mymarg{some counter}.
 % \iffalse
@@ -9924,9 +9936,9 @@ Some text here
           }
       }
   }
-\cs_new_protected:Npn \@@_standard_reset:nn #1 %%%#2
+\cs_new_protected:Npn \@@_standard_reset:nn #1 %#2
   {
-    \@@_reset_count_resume:en { \int_to_roman:n {#1} } %%%{#2}
+    \@@_reset_count_resume:en { \int_to_roman:n {#1} } %{#2}
   }
 \cs_new_protected:Npn \@@_starred_reset:n #1
   {
@@ -9935,7 +9947,7 @@ Some text here
 \cs_new_protected:Npn \@@_reset_count_resume:nn #1 #2
   {
     \counterwithin*{enumX#1}{#2}
-    \int_gzero:c { g_@@_resume_#1_int }
+    \counterwithin*{@@_resume_#1_int}{#2}
   }
 \cs_generate_variant:Nn \@@_reset_count_resume:nn { e }
 \cs_new_protected:Npn \@@_reset_count_resume_all:n #1
@@ -9973,18 +9985,18 @@ Some text here
   {
     \keys_define:nn { enumext / #1 }
       {
-        reset  .code:n = \@@_standard_reset_key:, 
+        reset  .code:n = \@@_standard_reset_key:,
         reset  .value_forbidden:n = true,
-        reset* .code:n = \@@_standard_reset_key_star:, 
+        reset* .code:n = \@@_standard_reset_key_star:,
         reset* .value_forbidden:n = true,
       }
   }
 \clist_map_inline:nn {level-1, level-2, level-3, level-4} { \@@_tmp:n {#1} }
 \keys_define:nn { enumext / enumext* }
   {
-    reset  .code:n = \@@_starred_reset_key:, 
+    reset  .code:n = \@@_starred_reset_key:,
     reset  .value_forbidden:n = true,
-    reset* .code:n = \@@_starred_reset_key:, 
+    reset* .code:n = \@@_starred_reset_key:,
     reset* .value_forbidden:n = true,
   }
 %    \end{macrocode}
@@ -9993,9 +10005,9 @@ Some text here
 % \subsubsection{Internal functions for \texttt{reset} and \texttt{reset*} keys}
 %
 % \begin{macro}[int]{\@@_standard_reset_key:, \@@_standard_reset_key_star:, \@@_starred_reset_key: }
-%   The function \cs{@@_standard_reset_key:} will be handled by the 
-%   \mykey{reset} key and will \emph{\enquote{reset}} the \myvarenv{g__@@_resume_X_int} 
-%   variable to \emph{\enquote{zero}} according to the \emph{level} at 
+%   The function \cs{@@_standard_reset_key:} will be handled by the
+%   \mykey{reset} key and will \emph{\enquote{reset}} the counter \myvarenv{c@__@@_resume_X_int}
+%   to \emph{\enquote{zero}} according to the \emph{level} at
 %   which it is executed within the \myenv*{enumext} environment.
 % \iffalse
 %% Internal functions for |reset| and |reset*| keys
@@ -10005,25 +10017,25 @@ Some text here
   {
     \int_compare:nNnT { \l_@@_level_int } > { 0 }
       {
-        \int_if_exist:cT { g_@@_resume_  \int_to_roman:n { \l_@@_level_int } _int }
+        \int_if_exist:cT { c@ @@_resume_ \int_to_roman:n { \l_@@_level_int } _int }
           {
-            \int_gzero:c { g_@@_resume_  \int_to_roman:n { \l_@@_level_int } _int }
+            \int_gzero:c { c@ @@_resume_ \int_to_roman:n { \l_@@_level_int } _int }
           }
       }
   }
 %    \end{macrocode}
-%   The function \cs{@@_standard_reset_key_star:} will be handled by the 
-%   \mykey{reset*} key and will \emph{\enquote{reset}} the \myvarenv{g__@@_resume_X_int} 
-%   variables to \emph{\enquote{zero}} from the \emph{level} at which it 
+%   The function \cs{@@_standard_reset_key_star:} will be handled by the
+%   \mykey{reset*} key and will \emph{\enquote{reset}} the counters \myvarenv{c@__@@_resume_X_int}
+%   to \emph{\enquote{zero}} from the \emph{level} at which it
 %   is executed within the \myenv*{enumext} environment to the \emph{lower levels}.
 %    \begin{macrocode}
 \cs_new_protected:Nn \@@_standard_reset_key_star:
   {
     \cs_set:Npn \@@_tmp:n ##1
       {
-        \int_if_exist:cT { g_@@_resume_  \int_to_roman:n {##1} _int }
+        \int_if_exist:cT { c@ @@_resume_ \int_to_roman:n {##1} _int }
           {
-            \int_gzero:c { g_@@_resume_  \int_to_roman:n {##1} _int }
+            \int_gzero:c { c@ @@_resume_ \int_to_roman:n {##1} _int }
           }
       }
     \int_compare:nNnT { \l_@@_level_int } > { 0 }
@@ -10032,14 +10044,14 @@ Some text here
       }
   }
 %    \end{macrocode}
-%   The function \cs{@@_starred_reset_key:} will be handled by 
-%   \mykey{reset} keys and \mykey{reset*} will \emph{\enquote{reset}} the 
-%   \myvarenv{g__@@_resume_vii_int} variable to \emph{\enquote{zero}} when 
+%   The function \cs{@@_starred_reset_key:} will be handled by
+%   \mykey{reset} keys and \mykey{reset*} will \emph{\enquote{reset}} the
+%   counter \myvarenv{c@__@@_resume_vii_int} to \emph{\enquote{zero}} when
 %   executed in the \myenv*{enumext*} environment.
 %    \begin{macrocode}
 \cs_new_protected:Nn \@@_starred_reset_key:
   {
-    \int_gzero:N \g_@@_resume_vii_int
+    \int_gzero:c { c@ @@_resume_vii_int }
   }
 %    \end{macrocode}
 % \end{macro}
