--- a/sources/enumext.sty
+++ b/sources/enumext.sty
@@ -564,7 +564,7 @@
   {
     \bool_if:NT \g__enumext_standar_bool
       {
-        \IfDocumentMetadataTF
+        \IfPDFManagementActiveTF
           {
             \__enumext_renew_footnote:
           }
@@ -580,7 +580,7 @@
   {
     \bool_if:NT \g__enumext_standar_bool
       {
-        \IfDocumentMetadataTF
+        \IfPDFManagementActiveTF
           {
             \__enumext_print_footnote:
           }
@@ -594,7 +594,7 @@
   }
 \cs_new_protected:Nn \__enumext_renew_footnote_starred:
   {
-    \IfDocumentMetadataTF
+    \IfPDFManagementActiveTF
       {
         \__enumext_renew_footnote_mini:
       }
@@ -607,7 +607,7 @@
   }
 \cs_new_protected:Nn \__enumext_print_footnote_starred:
   {
-    \IfDocumentMetadataTF
+    \IfPDFManagementActiveTF
       {
         \__enumext_print_footnote_mini:
       }
@@ -675,7 +675,6 @@
       }
   }
 \clist_map_inline:nn {i,ii,iii,iv,vii} { \__enumext_tmp:n {#1} }
-%% \int_show:c { c@ @@_resume_i_int }
 %% Register of counters style.
 \cs_new_protected:Npn \__enumext_register_default_label_wd:Nn #1 #2
   {
@@ -2021,7 +2020,7 @@
   {
     \str_case:nnF {#1}
       {
-        { resume } {} { resume* } {} { base-fix } {}
+        { resume } {} { resume* } {} { reset } {} { reset* } {} { base-fix } {}
       }
       { , { \exp_not:n {#1} } }
   }
@@ -2871,7 +2870,7 @@
   {
     \str_case:nnF {#1}
       {
-        { resume } {} { resume* } {} { no-store } {} { base-fix } {}
+        { resume } {} { resume* } {} { reset } {} { reset* } {} { no-store } {} { base-fix } {}
       }
       { , { \exp_not:n {#1} } }
   }
@@ -3730,7 +3729,7 @@
 %% Redefinition of |\makelabel| for |\item| and |\item*[sym][sep]| in |enumext| environment.
 \cs_new_protected:Nn \__enumext_make_label:
   {
-    \IfDocumentMetadataTF
+    \IfPDFManagementActiveTF
       {
         \__enumext_make_label_box:
       }
@@ -3912,7 +3911,7 @@
 %% Redefine |\makelabel| for |keyans| environment.
 \cs_new_protected:Nn \__enumext_keyans_make_label:
   {
-    \IfDocumentMetadataTF
+    \IfPDFManagementActiveTF
       {
         \__enumext_keyans_make_label_box:
       }
@@ -4480,7 +4479,7 @@
 %% Wrap socket in conditional functions for tagging |enumext*| and |keyans*| environments.
 \cs_new_protected_nopar:Npn \__enumext_start_list_tag:n #1
   {
-    \IfDocumentMetadataT
+    \IfPDFManagementActiveT
       {
         \socket_assign_plug:nn {tagsupport/__enumext/starred} {start-list-tags}
         \socket_use:nn {tagsupport/__enumext/starred} {#1}
@@ -4488,7 +4487,7 @@
    }
 \cs_new_protected_nopar:Nn \__enumext_stop_start_list_tag:
   {
-    \IfDocumentMetadataT
+    \IfPDFManagementActiveT
       {
         \socket_assign_plug:nn {tagsupport/__enumext/starred} {stop-start-tags}
         \socket_use:nn {tagsupport/__enumext/starred} { }
@@ -4496,7 +4495,7 @@
    }
 \cs_new_protected_nopar:Npn \__enumext_stop_list_tag:n #1
   {
-    \IfDocumentMetadataT
+    \IfPDFManagementActiveT
       {
         \socket_assign_plug:nn {tagsupport/__enumext/starred} {stop-list-tags}
         \socket_use:nn {tagsupport/__enumext/starred} {#1}
@@ -4534,7 +4533,7 @@
 %% Wrap socket in conditional functions for tagging |keyanspic| environment.
 \cs_new_protected_nopar:Nn \__enumext_anspic_start_list_tag:
   {
-    \IfDocumentMetadataT
+    \IfPDFManagementActiveT
       {
         \socket_assign_plug:nn {tagsupport/__enumext/keyanspic} {start-list-tags}
         \socket_use:n {tagsupport/__enumext/keyanspic}
@@ -4542,7 +4541,7 @@
    }
 \cs_new_protected_nopar:Nn \__enumext_anspic_stop_start_list_tag:
   {
-    \IfDocumentMetadataT
+    \IfPDFManagementActiveT
       {
         \socket_assign_plug:nn {tagsupport/__enumext/keyanspic} {stop-start-tags}
         \socket_use:n {tagsupport/__enumext/keyanspic}
@@ -4550,7 +4549,7 @@
    }
 \cs_new_protected_nopar:Nn \__enumext_anspic_stop_list_tag:
   {
-    \IfDocumentMetadataT
+    \IfPDFManagementActiveT
       {
         \socket_assign_plug:nn {tagsupport/__enumext/keyanspic} {stop-list-tags}
         \socket_use:n {tagsupport/__enumext/keyanspic}
@@ -4657,7 +4656,7 @@
     \__enumext_keyans_pic_safe_exec:
     \__enumext_keyans_pic_parse_keys:n {#1}
     \begin{list} { } { \__enumext_keyans_pic_arg_two: }
-    \IfDocumentMetadataT
+    \IfPDFManagementActiveT
       {
         \tag_suspend:n {list}
       }
@@ -4666,7 +4665,7 @@
       {
         \msg_error:nn { enumext } { keyanspic-item-cmd }
       }
-    \IfDocumentMetadataT
+    \IfPDFManagementActiveT
       {
         \tag_resume:n {keyanspic}
         \tag_tool:n {para/tagging=false}
@@ -4674,19 +4673,19 @@
       }
   }
   {
-    \IfDocumentMetadataT
+    \IfPDFManagementActiveT
       {
         \tag_resume:n {keyanspic}
         \tag_mc_end_push:
         \tag_struct_begin:n {tag=L,attribute=enumerate}
       }
     \__enumext_anspic_exec:
-    \IfDocumentMetadataT
+    \IfPDFManagementActiveT
       {
         \tag_suspend:n {keyanspic}
       }
     \end{list}
-    \IfDocumentMetadataT
+    \IfPDFManagementActiveT
       {
         \tag_struct_end:n {tag=L}
         \tag_mc_begin_pop:n {}
@@ -4736,7 +4735,7 @@
   {
     \bool_if:NF \l__enumext_anspic_label_above_bool
       {
-        \IfDocumentMetadataT
+        \IfPDFManagementActiveT
           {
             \tag_suspend:n {keyanspic}
           }
@@ -4745,7 +4744,7 @@
           {
             \box_ht_plus_dp:N \l__enumext_anspic_body_box
           }
-        \IfDocumentMetadataT
+        \IfPDFManagementActiveT
           {
             \tag_resume:n {keyanspic}
           }
@@ -4837,7 +4836,7 @@
       { \l__enumext_anspic_above_int + 1 }
       { \l__enumext_anspic_below_int }
       {
-        \IfDocumentMetadataT
+        \IfPDFManagementActiveT
           {
             \tag_suspend:n {minipage}
           }
@@ -4845,7 +4844,7 @@
           \centering
           \seq_item:Nn \l__enumext_anspic_args_seq { ##1 }
         \end{minipage}
-        \IfDocumentMetadataT
+        \IfPDFManagementActiveT
           {
             \tag_resume:n {minipage}
           }
@@ -5051,7 +5050,7 @@
       {
         \__enumext_stop_list:
         \__enumext_stop_store_level_vii:
-        \IfDocumentMetadataT { \tag_resume:n {enumext*} }
+        \IfPDFManagementActiveT { \tag_resume:n {enumext*} }
         \end__enumext_mini_page
         \hfill
         \bool_gset_true:N \g__enumext_minipage_active_vii_bool
@@ -5117,7 +5116,7 @@
     \bool_if:NTF \l__enumext_minipage_active_viii_bool
       {
         \__enumext_stop_list:
-        \IfDocumentMetadataTF { \tag_resume:n {keyans*} } { }
+        \IfPDFManagementActiveT { \tag_resume:n {keyans*} }
         \end__enumext_mini_page
         \hfill
         \bool_gset_true:N \g__enumext_minipage_active_viii_bool
@@ -5165,7 +5164,7 @@
         \__enumext_before_keys_exec_vii:
       }
     \setcounter { enumXvii } { \int_eval:n { \int_use:c { l__enumext_start_vii_int } - 1 } }
-    \IfDocumentMetadataT { \tag_suspend:n {enumext*} }
+    \IfPDFManagementActiveT { \tag_suspend:n {enumext*} }
     \__enumext_starred_columns_set_vii:
     \item[] \scan_stop:
     \cs_set_eq:NN \__enumext_stop_item_tmp_vii: \__enumext_first_item_tmp_vii:
@@ -5173,7 +5172,7 @@
     \ignorespaces
   }
   {
-    \IfDocumentMetadataT { \tag_struct_end:n {tag=text-unit} }
+    \IfPDFManagementActiveT { \tag_struct_end:n {tag=text-unit} }
     \__enumext_stop_item_tmp_vii:
     \__enumext_remove_extra_parsep_vii:
     \__enumext_after_list_vii:
@@ -5334,7 +5333,7 @@
         \legacy_if_set_false:n { @noitemarg }
         \legacy_if:nT { @nmbrlist }
           {
-            \IfDocumentMetadataT
+            \IfPDFManagementActiveT
               {
                 \bool_if:NT \l__enumext_hyperref_bool
                   {
@@ -5446,7 +5445,7 @@
         \__enumext_before_keys_exec_viii:
       }
     \setcounter { enumXviii } { \int_eval:n { \int_use:c { l__enumext_start_viii_int } - 1 } }
-    \IfDocumentMetadataT { \tag_suspend:n {keyans*} }
+    \IfPDFManagementActiveT { \tag_suspend:n {keyans*} }
     \__enumext_starred_columns_set_viii:
     \item[] \scan_stop:
     \cs_set_eq:NN \__enumext_stop_item_tmp_viii: \__enumext_first_item_tmp_viii:
@@ -5454,7 +5453,7 @@
     \ignorespaces
   }
   {
-    \IfDocumentMetadataT { \tag_struct_end:n {tag=text-unit} }
+    \IfPDFManagementActiveT { \tag_struct_end:n {tag=text-unit} }
     \__enumext_stop_item_tmp_viii:
     \__enumext_remove_extra_parsep_viii:
     \__enumext_check_starred_cmd:n { item }
@@ -5842,64 +5841,74 @@
         \msg_error:nnn { enumext } { undefined-storage-anskey } {#3}
       }
   }
-%% Internal function for filter keys in |\setenumext| for first level.
-\cs_new:Npn \__enumext_filter_first_level:n #1
+%% Internal function for filter keys in |\setenumext| for |enumext| and |enumext*|.
+\cs_new:Npn \__enumext_filter_level:n #1
   {
     \use:e
       {
         \keyval_parse:NNn
-          \__enumext_filter_first_level_key:n
-          \__enumext_filter_first_level_pair:nn {#1}
+          \__enumext_filter_level_key:n
+          \__enumext_filter_level_pair:nn {#1}
       }
   }
-\cs_new:Npn \__enumext_filter_first_level_key:n #1
+\cs_new:Npn \__enumext_filter_level_key:n #1
   {
     \str_case:nnF {#1}
       {
-        { resume   } {}
-        { resume*  } {}
+        { resume } {} { resume* } {} { reset } {} { reset* } {}
       }
       { , { \exp_not:n {#1} } }
   }
-\cs_new:Npn \__enumext_filter_first_level_pair:nn #1#2
+\cs_new:Npn \__enumext_filter_level_pair:nn #1#2
   {
     \str_case:nnF {#1}
       {
-        { series } {}
-        { resume } {}
-        { save-ans } {}
+        { series } {}  { save-ans } {} { resume } {}
       }
       { , { \exp_not:n {#1} } = { \exp_not:n {#2} } }
   }
 %% Add keys for |\setenumext|.
 \keys_define:nn { enumext / meta-families }
   {
-    enumext-1 .code:n =
-                {
-                  \keys_set:ne { enumext / level-1 }
-                    {
-                      \__enumext_filter_first_level:n {#1}
-                    }
-                } ,
-    enumext-2 .code:n = { \keys_set:nn { enumext / level-2 } {#1} } ,
-    enumext-3 .code:n = { \keys_set:nn { enumext / level-3 } {#1} } ,
-    enumext-4 .code:n = { \keys_set:nn { enumext / level-4 } {#1} } ,
-    keyans    .code:n = { \keys_set:nn { enumext / keyans  } {#1} } ,
-    enumext*  .code:n =
-                {
-                  \keys_set:ne { enumext / enumext* }
-                    {
-                      \__enumext_filter_first_level:n {#1}
-                    }
-                } ,
-    keyans*   .code:n = { \keys_set:nn { enumext / keyans* } {#1} } ,
-    print*    .code:n = { \keys_set:nn { enumext / print   } { print*  = {#1} } } ,
-    print-1   .code:n = { \keys_set:nn { enumext / print   } { print-1 = {#1} } } ,
-    print-2   .code:n = { \keys_set:nn { enumext / print   } { print-2 = {#1} } } ,
-    print-3   .code:n = { \keys_set:nn { enumext / print   } { print-3 = {#1} } } ,
-    print-4   .code:n = { \keys_set:nn { enumext / print   } { print-4 = {#1} } } ,
-    print-*   .code:n = { \keys_set:nn { enumext / print   } { print-* = {#1} } } ,
-    unknown   .code:n = { \msg_error:nn { enumext } { unknown-key-family } } ,
+    enumext-1 .code:n = {
+                          \keys_set:ne { enumext / level-1 }
+                            {
+                              \__enumext_filter_level:n {#1}
+                            }
+                        },
+    enumext-2 .code:n = {
+                           \keys_set:nn { enumext / level-2 }
+                            {
+                              \__enumext_filter_level:n {#1}
+                            }
+                        },
+    enumext-3 .code:n = {
+                          \keys_set:nn { enumext / level-3 }
+                            {
+                              \__enumext_filter_level:n {#1}
+                            }
+                        },
+    enumext-4 .code:n = {
+                          \keys_set:nn { enumext / level-4 }
+                            {
+                              \__enumext_filter_level:n {#1}
+                            }
+                        },
+    enumext*  .code:n = {
+                          \keys_set:ne { enumext / enumext* }
+                           {
+                             \__enumext_filter_level:n {#1}
+                           }
+                        },
+    keyans    .code:n = { \keys_set:nn { enumext / keyans  } {#1} },
+    keyans*   .code:n = { \keys_set:nn { enumext / keyans* } {#1} },
+    print*    .code:n = { \keys_set:nn { enumext / print   } { print*  = {#1} } },
+    print-1   .code:n = { \keys_set:nn { enumext / print   } { print-1 = {#1} } },
+    print-2   .code:n = { \keys_set:nn { enumext / print   } { print-2 = {#1} } },
+    print-3   .code:n = { \keys_set:nn { enumext / print   } { print-3 = {#1} } },
+    print-4   .code:n = { \keys_set:nn { enumext / print   } { print-4 = {#1} } },
+    print-*   .code:n = { \keys_set:nn { enumext / print   } { print-* = {#1} } },
+    unknown   .code:n = { \msg_error:nn { enumext } { unknown-key-family } },
   }
 \seq_const_from_clist:Nn \c__enumext_all_families_seq
   {
